--- a/templates/admin/_base.html
+++ b/templates/admin/_base.html
@@ -80,8 +80,8 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/static/js/jquery.min.js"><\/script>')</script>
+    <script src="/static/js/jquery-2.1.4.min.js"></script>
+{#    <script>window.jQuery || document.write('<script src="/static/js/jquery.min.js"><\/script>')</script>#}
     <script src="/static/js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
     <script src="/static/js/holder.min.js"></script>
