--- a/templates/admin/users_list.html
+++ b/templates/admin/users_list.html
@@ -1,12 +1,14 @@
-            <ul id="users">
-                {% for user in users %}
-                    <li class="nav">{{ user }}
-                        <button type="button" class="btn btn-default" aria-label="Edit">
-                            <span class="glyphicon glyphicon-credit-card" aria-hidden="true"></span>
-                        </button>
-                        <a href="delete/user/{{ user.id }}" class="btn btn-default">
-                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                        </a>
-                    </li>
-                {% endfor %}
-            </ul>
+<ul id="users_list">
+    {% for user in users %}
+        <li>{{ user }}
+            <button type="button" class="btn btn-default" aria-label="Edit"
+                    onclick="fill_form({{ user.id }})">
+                <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+            </button>
+             <button type="button" class="btn btn-default" aria-label="Delete"
+                    onclick="delete_user({{ user.id }})">
+                <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+            </button>
+        </li>
+    {% endfor %}
+</ul>
