FIX. Fixing incorrect path.

--- a/templates/myadmin/index.html
+++ b/templates/myadmin/index.html
@@ -1,4 +1,4 @@
-{% extends "admin/_base.html" %}
+{% extends "myadmin/_base.html" %}
 {% load static %}
 {% block title %}
     Главная
@@ -9,7 +9,7 @@
 
         <div class="col-md-8">
             Пользователи:
-        {% include 'admin/users_list.html' %}
+        {% include 'myadmin/users_list.html' %}
         </div>
 
         <div class="col-md-4">
