--- a/templates/_base.html
+++ b/templates/_base.html
@@ -72,7 +72,7 @@
                                     aria-hidden="true">&times;</span></button>
                             <p>Сожалеем, вы неправильно ввели логин
                                 или пароль</p>
-                            <a href="/user/registration/" class="btn btn-info btn-sm">Регистрация</a>
+                            <a href="/user/registration/" class="btn-info btn-sm">Регистрация</a>
                         </div>
                     {% endif %}
                     <form class="navbar-form navbar-right" method="post" action="/user/login/">
@@ -84,7 +84,7 @@
                             <input type="password" placeholder="Password" class="form-control"
                                    name="password">
                         </div>
-                        <button type="submit" class="btn-navbar btn-success">Войти</button>
+                        <button type="submit" class="btn-success btn-xs">Войти</button>
                     </form>
                 {% else %}
                     <div class="navbar-right">
