--- a/templates/myadmin/index.html
+++ b/templates/myadmin/index.html
@@ -19,5 +19,9 @@
             <input type="submit" value="Edit account" onclick="send_data()">
         </div>
     </div>
+{% endblock %}
 
+{% block js %}
+    {{   block.super }}
+        <script src="/static/js/create_user.js"></script>
 {% endblock %}
