--- a/templates/myadmin/users_list.html
+++ b/templates/myadmin/users_list.html
@@ -14,14 +14,7 @@
             <td>{{ user }}</td>
             <td>{{ user.email }}</td>
             <td>
-                <button type="button" class="btn btn-warning btn-sm" aria-label="Edit"
-                        onclick="fill_form({{ user.id }})">
-                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Редактировать
-                </button>
-                <button type="button" class="btn btn-danger btn-sm" aria-label="Delete"
-                        onclick="delete_user({{ user.id }})">
-                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Удалить
-                </button>
+                               {% include 'myadmin/user_buttons.html' %}
             </td>
         </tr>
     {% endfor %}
