--- a/templates/myadmin/services_list.html
+++ b/templates/myadmin/services_list.html
@@ -12,14 +12,7 @@
             <td>{{ service.id }}</td>
             <td>{{ service.name }}</td>
             <td>
-                <button type="button" class="btn btn-warning btn-sm" aria-label="Edit"
-                        onclick="fill_form({{ service.id }})">
-                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Редактировать
-                </button>
-                <button type="button" class="btn btn-danger btn-sm" aria-label="Delete"
-                        onclick="delete_user({{ service.id }})">
-                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Удалить
-                </button>
+                {% include 'myadmin/service_buttons.html' %}
             </td>
         </tr>
     {% endfor %}
