--- a/templates/myadmin/_base.html
+++ b/templates/myadmin/_base.html
@@ -64,6 +64,10 @@
           <ul class="nav nav-sidebar">
             <li class="{% if nbar == 'admin_home' %}active{% endif %}"><a href="/my_admin/">Пользователи <span class="sr-only">(current)</span></a></li>
             <li class="{% if nbar == 'admin_services' %}active{% endif %}"><a href="/my_admin/services/">Услуги</a></li>
+            <ul class="nav nav-second-level collapse in" aria-expanded="true" style>
+                            {% for service in services %}
+                            <li><a href="{% url 'service_detail' pk=service.id  %}">{{ service.name }}</a></li>
+                            {% endfor %}
 {#            <li><a href="#">Analytics</a></li>#}
 {#            <li><a href="#">Export</a></li>#}
           </ul>
