--- a/templates/myadmin/_base.html
+++ b/templates/myadmin/_base.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -29,68 +29,86 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Project name</a>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Project name</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Dashboard</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="#">Help</a></li>
-          </ul>
-          <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search...">
-          </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Dashboard</a></li>
+                <li><a href="#">Settings</a></li>
+                <li><a href="#">Profile</a></li>
+                <li><a href="#">Help</a></li>
+            </ul>
+            <form class="navbar-form navbar-right">
+                <input type="text" class="form-control" placeholder="Search...">
+            </form>
         </div>
-      </div>
-    </nav>
+    </div>
+</nav>
 
-    <div class="container-fluid">
-      <div class="row">
+<div class="container-fluid">
+    <div class="row">
         <div class="col-sm-3 col-md-2 sidebar">
-          <ul class="nav nav-sidebar">
-            <li class="{% if nbar == 'admin_home' %}active{% endif %}"><a href="/my_admin/">Пользователи <span class="sr-only">(current)</span></a></li>
-            <li class="{% if nbar == 'admin_services' %}active{% endif %}"><a href="/my_admin/services/">Услуги</a></li>
-            <ul class="nav nav-second-level collapse in" aria-expanded="true" style>
-                            {% for service in services %}
-                            <li><a href="{% url 'admin_service_detail' pk=service.id  %}">{{ service.name }}</a></li>
-                            {% endfor %}
-{#            <li><a href="#">Analytics</a></li>#}
-{#            <li><a href="#">Export</a></li>#}
-          </ul>
+            <ul class="nav nav-sidebar">
+                <li class="{% if nbar == 'admin_home' %}active{% endif %}"><a href="/my_admin/">Пользователи
+                    <span class="sr-only">(current)</span></a></li>
+                <li class="{% if nbar == 'admin_services' %}active{% endif %}"><a href="/my_admin/services/">Услуги</a>
+                </li>
+                <div class="panel-group">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                Услуги:
+                            </h4>
+                        </div>
+                        <div>
+                            <ul class="list-group">
+                                {% for service in services %}
+                                    <a href="{% url 'admin_service_detail' pk=service.id %}">
+                                        <li class="{% if service.pk|slugify in request.path %}active{% endif %} list-group-item">
+                                            {{ service.name }}
+                                        </li>
+                                    </a>
+                                {% endfor %}
+                            </ul>
+                            </li>
+                        </div>
+                    </div>
+                </div>
+            </ul>
         </div>
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Личный кабинет</h1>
-          <h2 class="sub-header"> </h2>
+            <h1 class="page-header">Личный кабинет</h1>
+            <h2 class="sub-header"></h2>
             {% block content %}
             {% endblock %}
         </div>
-      </div>
     </div>
-    {% block js %}
-     <!-- Bootstrap core JavaScript
-    ================================================== -->
+</div>
+{% block js %}
+    <!-- Bootstrap core JavaScript
+   ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="/static/js/jquery-2.1.4.min.js"></script>
-{#    <script>window.jQuery || document.write('<script src="/static/js/jquery.min.js"><\/script>')</script>#}
+    {#    <script>window.jQuery || document.write('<script src="/static/js/jquery.min.js"><\/script>')</script>#}
     <script src="/static/js/bootstrap.min.js"></script>
     <!-- Just to make our placeholder images work. Don't actually copy the next line! -->
     <script src="/static/js/holder.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="/static/js/ie10-viewport-bug-workaround.js"></script>
-    {% endblock %}
-    </body>
+{% endblock %}
+</body>
 </html>
