--- a/templates/myadmin/service_detail.html
+++ b/templates/myadmin/service_detail.html
@@ -14,3 +14,7 @@
     </div>
 
 {% endblock %}
+{% block js %}
+    {{   block.super }}
+        <script src="/static/js/create_service_detail.js"></script>
+{% endblock %}
