Creating ajax views to CRUD Service details

--- a/templates/myadmin/service_detail_list.html
+++ b/templates/myadmin/service_detail_list.html
@@ -1,4 +1,4 @@
-<table class="table table-hover table-striped table-condensed" id="services_list">
+<table class="table table-hover table-striped table-condensed" id="service_detail_list">
     <thead>
     <tr>
         <th># id</th>
