--- a/templates/service_detail.html
+++ b/templates/service_detail.html
@@ -17,20 +17,19 @@
                 <div class="row">
                     <div class="col-md-3">
                         <p>
-                            {{ line.name }}
-                        </p>
-                    </div>
-                    <div class="col-md-3">
-                        <p>
-                            {{ line.description }}
+                            {{ line.name|capfirst }}
                         </p>
                     </div>
                     <div class="col-md-6">
                         <p>
+                            {{ line.description }}
+                        </p>
+                    </div>
+                    <div class="col-md-3">
+                        <p>
                             {{ line.price }}
                         </p>
                     </div>
-
                 </div>
             {% endfor %}
         </div>
