--- a/templates/service_detail.html
+++ b/templates/service_detail.html
@@ -15,7 +15,7 @@
                     </div>
                 </div>
             </div>
-            {% for line in service_list %}
+            {% for line in object_list %}
                 <div class="row">
                     <div class="col-md-3">
                         <p>
@@ -34,23 +34,23 @@
                     </div>
                 </div>
             {% endfor %}
-            {% if service_list.has_other_pages %}
+            {% if is_paginated %}
                 <ul class="pagination">
-                    {% if service_list.has_previous %}
-                        <li><a href="?page={{ service_list.previous_page_number }}">&laquo;</a></li>
+                    {% if page_obj.has_previous %}
+                        <li><a href="?page={{ page_obj.previous_page_number }}">&laquo;</a></li>
                     {% else %}
                         <li class="disabled"><span>&laquo;</span></li>
                     {% endif %}
-                    {% for i in service_list.paginator.page_range %}
-                        {% if service_list.number == i %}
+                    {% for i in page_obj.paginator.page_range %}
+                        {% if page_obj.number == i %}
                             <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span>
                             </li>
                         {% else %}
                             <li><a href="?page={{ i }}">{{ i }}</a></li>
                         {% endif %}
                     {% endfor %}
-                    {% if service_list.has_next %}
-                        <li><a href="?page={{ service_list.next_page_number }}">&raquo;</a></li>
+                    {% if page_obj.has_next %}
+                        <li><a href="?page={{ page_obj.next_page_number }}">&raquo;</a></li>
                     {% else %}
                         <li class="disabled"><span>&raquo;</span></li>
                     {% endif %}
