--- a/templates/index.html
+++ b/templates/index.html
@@ -15,14 +15,14 @@
         <div class="container pad45">
             <div class="row">
                 <div class="services-wrapper">
-                    {% for service in services %}
+                    {% for serv in services %}
 						<div class="col-md-4">
-							<div class="icon {{ service.bg_color }}">
-								<span class="fa {{ service.fa_icon }}"></span>
+							<div class="icon {{ serv.bg_color }}">
+								<span class="fa {{ serv.fa_icon }}"></span>
 							</div>
-                            <a href="{% url 'service_detail' pk=service.id  %}"><h4>{{ service.name }}</h4></a>
+                            <a href="{% url 'service_detail' service_id=serv.id  %}"><h4>{{ serv.name }}</h4></a>
 
-							<p>{{ service.description }}</p>
+							<p>{{ serv.description }}</p>
 						</div>
                     {% endfor %}
                 </div>
